WISECOW-DEPLOYMENT-wisecow/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  namespace: wisecow
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: kandalajayanth401/wisecow:latest   
          imagePullPolicy: Always
          ports:
            - containerPort: 4499
