WISECOW-DEPLOYMENT-wisecow/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - name: http
      port: 80
      targetPort: 4499
  type: ClusterIP
